[13.2] Fix Bug Impression Devis + Objet Hist
